minio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: minio-gateway
  namespace: minio
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: minio-api
        protocol: HTTPS
      hosts:
        - minio.gwg313.xyz
      tls:
        mode: SIMPLE
        credentialName: minio-cert
    - port:
        number: 443
        name: minio-console
        protocol: HTTPS
      hosts:
        - minio-console.gwg313.xyz
      tls:
        mode: SIMPLE
        credentialName: minio-cert
