minio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-console
  namespace: minio
spec:
  hosts:
    - s3-console.gwg313.xyz
  gateways:
    - minio-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio
            port:
              number: 9001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-api
  namespace: minio
spec:
  hosts:
    - s3.gwg313.xyz
  gateways:
    - minio-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio
            port:
              number: 9000
